# clang-wrapper

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  Doxyfile  Makefile  annotated.html  arguments_8cc.html  arguments_8h.html  arguments_8h_source.html  assertion_8cc.html  assertion_8h.html  assertion_8h_source.html  base_8cc.html  call__hook_2declaration_8c.html  call__hook_2declaration_8h.html  call__hook_2declaration_8h_source.html  call__hook_2runtime_8c.html  call__hook_2runtime_8h.html  call__hook_2runtime_8h_source.html  call__hook_8cc.html  classArguments-members.html  classArguments.html  classExecutor-members.html  classExecutor.html  classJNIInterfaceDetector-members.html  classJNIInterfaceDetector.html  classJNIMethodDetector-members.html  classJNIMethodDetector.html  classLogger-members.html  classLogger.html  classPassBase-members.html  classPassBase.html  classPassCallHook-members.html  classPassCallHook.html  classPassInterfaceCounter-members.html  classPassInterfaceCounter.html  classPassStructParser-members.html  (+131 more)
.github/workflows/: bump-version.yaml  bump.yaml  doxygen.yaml
cmake/: config.cmake  utility.cmake
runtime/: Makefile
runtime/call_hook/: declaration.h
runtime/common/: dictionary.c  dictionary.h
runtime/jni/interface_counter/: declaration.c  runtime.c  runtime.h
scripts/: log.sh  wrap-ndk.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  defines_8.js  (+40 more)
src/: main.cc
src/common/: arguments.cc  arguments.h  env.cc  env.h  executor.cc  executor.h  logging.cc  logging.h  path.cc  path.h  phase.cc  phase.h
src/main/: base.cc  call_hook.cc  struct_parser.cc
src/main/jni/: interface_counter.cc
src/pass/: pass_base.cc  pass_base.h  pass_call_hook.cc  pass_call_hook.h  pass_struct_parser.cc  pass_struct_parser.h
src/pass/jni/: pass_interface_counter.cc  pass_interface_counter.h
src/runtime/: .gitignore
src/runtime/call_hook/: declaration.c  runtime.c  runtime.h
src/utility/: assertion.cc  assertion.h  jni_interface_detector.cc  jni_interface_detector.h  location.cc  location.h  struct_parser.cc  struct_parser.h
src/utility/jni/: jni_interface_detector.h  jni_method_detector.cc  jni_method_detector.h
src/wrapper/: Makefile  main.cc  main.h  wrapper_base.cc  wrapper_base.h  wrapper_call_hook.cc  wrapper_call_hook.h  wrapper_struct_parser.cc  wrapper_struct_parser.h
src/wrapper/common/: arguments.h  executor.cc  executor.h  logging.cc  logging.h
src/wrapper/jni/: wrapper_interface_counter.cc  wrapper_interface_counter.h
src/wrapper/wrapper/: wrapper_base.cc  wrapper_base.h
targets/: struct.c
