if (POLICY CMP0048)
  cmake_policy(SET CMP0048 NEW)
endif()
project(clang-wrapper VERSION 0.1.0)
cmake_minimum_required(VERSION 3.24)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE debug)
endif()
string(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
message(STATUS "Build Type ${CMAKE_BUILD_TYPE}")
if(CMAKE_BUILD_TYPE STREQUAL "debug")
  option(ASAN "Address Sanitizer" ON)
else()
  option(ASAN "Address Sanitizer" OFF)
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
message(STATUS "CMAKE_EXPORT_COMPILE_COMMANDS ${CMAKE_EXPORT_COMPILE_COMMANDS}")

message(STATUS "Address Sanitizer ${ASAN}")
if(ASAN)
  add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address)
endif()

function(llvm_config OUTPUT_VARIABLE ARGS)
  execute_process(COMMAND llvm-config ${ARGS} OUTPUT_VARIABLE ${OUTPUT_VARIABLE})
  string(STRIP ${${OUTPUT_VARIABLE}} ${OUTPUT_VARIABLE})
  set(${OUTPUT_VARIABLE} ${${OUTPUT_VARIABLE}} PARENT_SCOPE)
endfunction()

llvm_config(LLVM_HOME --prefix)
set(CMAKE_C_COMPILER ${LLVM_HOME}/bin/clang)
set(CMAKE_CXX_COMPILER ${LLVM_HOME}/bin/clang++)
llvm_config(LLVM_INCLUDE_DIR --includedir)
include_directories(${LLVM_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src)
llvm_config(LLVM_LIBDIR --libdir)
link_directories(${LLVM_LIBDIR})
llvm_config(LLVM_LIBS --libs)
link_libraries(${LLVM_LIBS})

aux_source_directory(${CMAKE_SOURCE_DIR}/src/common/ COMMON_SRCS)

list(APPEND BASE_SRCS ${COMMON_SRCS} src/pass/pass_base.cc src/wrapper/wrapper_base.cc)
add_executable(base   ${BASE_SRCS} src/main/base.cc)
add_executable(base++ ${BASE_SRCS} src/main/base.cc)
target_compile_definitions(base++ PUBLIC USE_CXX)

list(APPEND CALL_HOOK_SRCS ${BASE_SRCS} src/pass/pass_call_hook.cc src/wrapper/wrapper_call_hook.cc)
add_executable(call-hook   ${CALL_HOOK_SRCS} src/main/call_hook.cc)
add_executable(call-hook++ ${CALL_HOOK_SRCS} src/main/call_hook.cc)
target_compile_definitions(call-hook   PUBLIC RUNTIME_HOME="${CMAKE_SOURCE_DIR}/src/runtime/call_hook")
target_compile_definitions(call-hook++ PUBLIC RUNTIME_HOME="${CMAKE_SOURCE_DIR}/src/runtime/call_hook")
target_compile_definitions(call-hook++ PUBLIC USE_CXX)

list(APPEND STRUCT_PARSER_SRCS ${BASE_SRCS} src/pass/pass_struct_parser.cc src/wrapper/wrapper_struct_parser.cc src/utility/struct_parser.cc)
add_executable(struct-parser   ${STRUCT_PARSER_SRCS} src/main/struct_parser.cc)
add_executable(struct-parser++ ${STRUCT_PARSER_SRCS} src/main/struct_parser.cc)
target_compile_definitions(struct-parser++ PUBLIC USE_CXX)
